attempted to fix a formatting issue on mobile, but it doesn't seem to have worked. Fixed a wrong link in the LTW page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,6 +196,7 @@ input, select, textarea {
 		font-weight: 600;
 		line-height: 1.65;
 		margin: 0 0 1em 0;
+		word-wrap: break-word;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
